--- a/Kartoteka/MainWindow.xaml
+++ b/Kartoteka/MainWindow.xaml
@@ -1,19 +1,23 @@
-﻿<Window x:Class="Kartoteka.MainWindow"
+﻿<Controls:MetroWindow x:Class="Kartoteka.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
-        Height="300"
-        Width="300"
-        Title="MVVM Light Application"
+        GlowBrush="{DynamicResource AccentColorBrush}"
+        BorderThickness="2"
+        Height="500"
+        Width="800"
+        Title="Kartoteka Application"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
     
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Skins/MainSkin.xaml" />
+                <ResourceDictionary Source="Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
@@ -29,4 +33,4 @@
                    TextWrapping="Wrap" />
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
