--- a/Kartoteka/AddBook.xaml
+++ b/Kartoteka/AddBook.xaml
@@ -1,4 +1,5 @@
 ﻿<Controls:MetroWindow x:Class="Kartoteka.AddBook"
+        x:Name="BookAdd"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
@@ -34,23 +35,24 @@
         <TextBlock VerticalAlignment="Center"   FontSize="20" Grid.Row="1" Grid.Column="0" Margin="10,0,0,0" Height="25" >
             Title
         </TextBlock>
-        <TextBox  Grid.Row="1" Grid.Column="1"  BorderThickness="3" 
+        <TextBox  Grid.Row="1" Grid.Column="1"  BorderThickness="3" Text="{Binding SelectedBook.Title}"
                  BorderBrush="Black" Height="30" Margin="0,0,10,0" FontSize="14" />
         <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="2" Grid.Column="0" Margin="10,0,0,0" Height="25" >
             Genre
         </TextBlock>
+        <TextBox  Grid.Row="2" Grid.Column="1"  BorderThickness="3"  Text="{Binding SelectedBook.Genre}"
+                 BorderBrush="Black" Height="30" Margin="0,0,10,0" FontSize="14" />
         <ListBox Grid.Row="3" Grid.Column="1">
 
         </ListBox>
         <TextBlock VerticalAlignment="Center" Text="List of authors"  
                    Width="140" FontSize="20" Grid.Row="3" Grid.Column="0" Margin="10,0,0,0" Height="25" >
         </TextBlock>
-        <TextBox  Grid.Row="2" Grid.Column="1"  BorderThickness="3" 
-                 BorderBrush="Black" Height="30" Margin="0,0,10,0" FontSize="14" />
-        <Button Style="{StaticResource ButtonStyle}"  Content="Cancel"  Command="{Binding Cancel}" CommandParameter="{Binding}" Grid.Row="4" Grid.Column="0" IsCancel="True"
+        <Button Style="{StaticResource ButtonStyle}"  Content="Cancel"  Command="{Binding CloseWindowCommand, Mode=OneWay}"  CommandParameter="{Binding ElementName=BookAdd}" 
+                Grid.Row="4" Grid.Column="0" IsCancel="True"
                  HorizontalAlignment="Left" Margin="10,0,0,10"  VerticalAlignment="Bottom" Width="120" Height="40"  FontSize="20" >
         </Button>
-        <Button Style="{StaticResource ButtonStyle}" Content="Save"  Command="{Binding Save}" CommandParameter="{Binding}" Grid.Row="4" Grid.Column="1" IsDefault="True"
+        <Button Style="{StaticResource ButtonStyle}" Content="Save"   Grid.Row="4" Grid.Column="1" IsDefault="True"
                   VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10.4,10" Width="120" Height="40" FontSize="20" />
     </Grid>
 </Controls:MetroWindow>
