--- a/Kartoteka/AddAuthor.xaml
+++ b/Kartoteka/AddAuthor.xaml
@@ -41,10 +41,19 @@
         <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="2" Grid.Column="0" Margin="10,0,0,0" Height="25" >
             Surname
         </TextBlock>
-        <ListBox Grid.Row="3" Grid.Column="1">
-            
+        <ListBox x:Name="BooksList"  Margin="10,0,20,0"  BorderThickness="2"  ItemContainerStyle="{StaticResource myLBStyle}"
+                 ItemsSource="{Binding Path =Books}" SelectionMode="Multiple" Grid.Row="3" Grid.Column="1">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" Margin="5">
+                        <TextBlock FontSize="16" Text="{Binding Path=ID}" Margin="0,0,5,0" />
+                        <TextBlock FontSize="16" Text="{Binding Path=Title}" Margin="0,0,10,0"    />
+                        <TextBlock FontSize="16" Text="{Binding Path=Genre}"  />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
         </ListBox>
-        <TextBlock VerticalAlignment="Center" Text="List of books"  
+        <TextBlock VerticalAlignment="Center" Text="List of books"
                    Width="140" FontSize="20" Grid.Row="3" Grid.Column="0" Margin="10,0,0,0" Height="25" >
         </TextBlock>
         <TextBox  Grid.Row="2" Grid.Column="1"  BorderThickness="3" Text="{Binding SelectedAuthor.Surname}"
@@ -53,7 +62,8 @@
                 Content="Cancel"   Grid.Row="4" Grid.Column="0" IsCancel="True"
                  HorizontalAlignment="Left" Margin="10,0,0,10"  VerticalAlignment="Bottom" Width="120" Height="40"  FontSize="20" >
         </Button>
-        <Button Style="{StaticResource ButtonStyle}" Content="Save"  Grid.Row="4" Grid.Column="1" IsDefault="True"
+        <Button Style="{StaticResource ButtonStyle}"  Content="Save" Command="{Binding SaveListCommand}" 
+    CommandParameter="{Binding ElementName=BooksList, Path=SelectedItems}"  Grid.Row="4" Grid.Column="1" IsDefault="True"
                   VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10.4,10" Width="120" Height="40" FontSize="20" />
     </Grid>
 </Controls:MetroWindow>
