--- a/Kartoteka/AddAuthor.xaml
+++ b/Kartoteka/AddAuthor.xaml
@@ -46,7 +46,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="5">
-                        <TextBlock FontSize="16" Text="{Binding Path=ID}" Margin="0,0,5,0" />
+                        <TextBlock FontSize="16" Text="{Binding Path=Id}" Margin="0,0,5,0" />
                         <TextBlock FontSize="16" Text="{Binding Path=Title}" Margin="0,0,10,0"    />
                         <TextBlock FontSize="16" Text="{Binding Path=Genre}"  />
                     </StackPanel>
