--- a/Kartoteka/AddBook.xaml
+++ b/Kartoteka/AddBook.xaml
@@ -47,9 +47,8 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="5">
-                        <TextBlock FontSize="16" Text="Name:" Margin="0,0,5,0" />
+                        <TextBlock FontSize="16" Text="{Binding Path=Id}" Margin="0,0,5,0" />
                         <TextBlock FontSize="16" Text="{Binding Path=Name}" Margin="0,0,10,0"    />
-                        <TextBlock FontSize="16" Text="Surname:" Margin="0,0,5,0" />
                         <TextBlock FontSize="16" Text="{Binding Path=Surname}"  />
                     </StackPanel>
                 </DataTemplate>
@@ -62,7 +61,8 @@
                 Grid.Row="4" Grid.Column="0" IsCancel="True"
                  HorizontalAlignment="Left" Margin="10,0,0,10"  VerticalAlignment="Bottom" Width="120" Height="40"  FontSize="20" >
         </Button>
-        <Button Style="{StaticResource ButtonStyle}" Content="Save"   Grid.Row="4" Grid.Column="1" IsDefault="True"
+        <Button Style="{StaticResource ButtonStyle}" Content="Save" Grid.Row="4" Grid.Column="1" IsDefault="True"
+                Command="{Binding SaveListCommand}"   CommandParameter="{Binding ElementName=AuthorsList, Path=SelectedItems}"
                   VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10.4,10" Width="120" Height="40" FontSize="20" />
     </Grid>
 </Controls:MetroWindow>
