--- a/Kartoteka/AuthorProfile.xaml
+++ b/Kartoteka/AuthorProfile.xaml
@@ -13,7 +13,6 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Skins/MainSkin.xaml" />
                 <ResourceDictionary Source="Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
@@ -57,7 +56,7 @@
         </TextBlock>
         <TextBlock  Grid.Row="2" Grid.Column="1" FontSize="20"  Text="{Binding SelectedAuthor.Surname}"
                 Height="30" Margin="0,0,10,0"  />
-        <Button Style="{StaticResource ButtonStyle}" Command="{Binding CloseWindowCommand, Mode=OneWay}"  CommandParameter="{Binding ElementName=AuthorProf}"
+        <Button Style="{StaticResource ButtonStyle}" Command="{Binding CloseEditWinCommand, Mode=OneWay}"  CommandParameter="{Binding ElementName=AuthorProf}"
                 Content="Cancel"   Grid.Row="4" Grid.Column="0" IsCancel="True"
                  HorizontalAlignment="Left" Margin="10,0,0,10"  VerticalAlignment="Bottom" Width="120" Height="40"  FontSize="20" >
         </Button>
