--- a/Kartoteka/EditBook.xaml
+++ b/Kartoteka/EditBook.xaml
@@ -1,15 +1,15 @@
-﻿<Controls:MetroWindow x:Class="Kartoteka.EditAuthor"
-             x:Name="AuthorEditt"
+﻿<Controls:MetroWindow x:Class="Kartoteka.EditBook"
+                      x:Name="BookEditt"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kartoteka"
         GlowBrush="{DynamicResource AccentColorBrush}"
         DataContext="{Binding Search, Source={StaticResource Locator}}"
         mc:Ignorable="d"
-        Title="EditAuthor" Height="500" Width="500">
+        Title="EditBook" Height="500" Width="500">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -28,35 +28,35 @@
         </Grid.RowDefinitions>
 
         <TextBlock HorizontalAlignment="Center" Grid.Row="0"  FontSize="36" FontWeight="Bold" 
-                   Foreground="#FFC716C7" Text="Edit author"  />
+                   Foreground="#FFC716C7" Text="Edit book"  />
         <TextBlock    FontSize="20" Grid.Row="1" Grid.Column="0" Margin="10,0,0,0" Height="30" >
-            Remove existing books
+            Remove existing authors
         </TextBlock>
         <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="2" Grid.Column="0" Margin="10,0,0,0" Height="25" >
-            Add new books
+            Add new autrohs
         </TextBlock>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="0.5*" />
             </Grid.ColumnDefinitions>
-            <ListBox x:Name="BooksList"  Margin="10,0,20,0" SelectionMode="Multiple"  BorderThickness="2"  ItemContainerStyle="{StaticResource myLBStyle}"
-                 ItemsSource="{Binding Path =SelectedAuthor.books}"   >
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal" Margin="5">
-                        <TextBlock FontSize="16" Text="{Binding Path=Id}" Margin="0,0,5,0" />
-                        <TextBlock FontSize="16" Text="{Binding Path=Title}" Margin="0,0,10,0"    />
-                        <TextBlock FontSize="16" Text="{Binding Path=Genre}"  />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-            <Button Style="{StaticResource ButtonStyle}"  Content="Remove" Command="{Binding RemoveBooksCommand}" 
-    CommandParameter="{Binding ElementName=BooksList, Path=SelectedItems}"  Grid.Column="1"  IsDefault="True"
+            <ListBox x:Name="AuthorsList"  Margin="10,0,20,0" SelectionMode="Multiple"  BorderThickness="2"  ItemContainerStyle="{StaticResource myLBStyle}"
+                 ItemsSource="{Binding Path =SelectedBook.authors}"   >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <TextBlock FontSize="16" Text="{Binding Path=Id}" Margin="0,0,5,0" />
+                            <TextBlock FontSize="16" Text="{Binding Path=Name}" Margin="0,0,10,0"    />
+                            <TextBlock FontSize="16" Text="{Binding Path=Surname}"  />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Button Style="{StaticResource ButtonStyle}"  Content="Remove" Command="{Binding RemoveAuthorsCommand}" 
+    CommandParameter="{Binding ElementName=AuthorsList, Path=SelectedItems}"  Grid.Column="1"  IsDefault="True"
                   VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10.4,10" Width="120" Height="40" FontSize="20" />
         </Grid>
-        <TextBlock HorizontalAlignment="Left" Text="Add new books"
+        <TextBlock HorizontalAlignment="Left" Text="Add new authors"
                    Width="140" FontSize="20" Grid.Row="3" Grid.Column="0" Margin="10,0,0,0" Height="30" >
         </TextBlock>
         <Grid Grid.Row="4">
@@ -64,23 +64,23 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="0.5*" />
             </Grid.ColumnDefinitions>
-            <ListBox x:Name="NewBooksList"  Margin="10,0,19.8,0.4" SelectionMode="Multiple"  BorderThickness="2"  ItemContainerStyle="{StaticResource myLBStyle}"
-                 ItemsSource="{Binding Path =Allbooks}"   >
+            <ListBox x:Name="NewAuthorsList"  Margin="10,0,19.8,0.4" SelectionMode="Multiple"  BorderThickness="2"  ItemContainerStyle="{StaticResource myLBStyle}"
+                 ItemsSource="{Binding Path =Allauthors}"   >
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal" Margin="5">
                             <TextBlock FontSize="16" Text="{Binding Path=Id}" Margin="0,0,5,0" />
-                            <TextBlock FontSize="16" Text="{Binding Path=Title}" Margin="0,0,10,0"    />
-                            <TextBlock FontSize="16" Text="{Binding Path=Genre}"  />
+                            <TextBlock FontSize="16" Text="{Binding Path=Name}" Margin="0,0,10,0"    />
+                            <TextBlock FontSize="16" Text="{Binding Path=Surname}"  />
                         </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <Button Style="{StaticResource ButtonStyle}"  Content="Add" Command="{Binding AddNewBooksCommand}" 
-    CommandParameter="{Binding ElementName=NewBooksList, Path=SelectedItems}"  Grid.Column="1"  IsDefault="True"
+            <Button Style="{StaticResource ButtonStyle}"  Content="Add" Command="{Binding AddNewAuthorsCommand}" 
+    CommandParameter="{Binding ElementName=NewAuthorsList, Path=SelectedItems}"  Grid.Column="1"  IsDefault="True"
                   VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10.4,10" Width="120" Height="40" FontSize="20" />
         </Grid>
-        <Button Style="{StaticResource ButtonStyle}" Command="{Binding CloseEditWinCommand}"  CommandParameter="{Binding ElementName=AuthorEditt}"
+        <Button Style="{StaticResource ButtonStyle}" Command="{Binding CloseEditWinCommand}"  CommandParameter="{Binding ElementName=BookEditt}"
                 Content="OK"   Grid.Row="5"  IsCancel="True" Width="120" Height="40"  FontSize="20" >
         </Button>
 
