--- a/Kartoteka/AuthorProfile.xaml
+++ b/Kartoteka/AuthorProfile.xaml
@@ -40,7 +40,7 @@
             Surname
         </TextBlock>
         <ListBox x:Name="BooksList"  Margin="10,0,20,0"  BorderThickness="2"  ItemContainerStyle="{StaticResource myLBStyle}"
-                 ItemsSource="{Binding Path =SelectedAuthor.books}"  Grid.Row="3" Grid.Column="1">
+                 ItemsSource="{Binding Path =SelectedAuthor.books , Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  Grid.Row="3" Grid.Column="1">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" Margin="5">
