--- a/NewKartoteka/MainWindow.xaml
+++ b/NewKartoteka/MainWindow.xaml
@@ -1,4 +1,7 @@
-﻿<Controls:MetroWindow x:Class="NewKartoteka.MainWindow"
+﻿
+    
+    <!--Пусть окно запускается на всю ширину и высоту экрана-->
+    <Controls:MetroWindow x:Class="NewKartoteka.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
@@ -33,7 +36,10 @@
                     <Controls:Flyout BorderThickness="2" BorderBrush="{DynamicResource AccentColorBrush}" Panel.ZIndex="1" Theme="Adapt"  Width="480"
                                      IsOpen="{Binding IsNewBookOpen}" Grid.RowSpan="3" Grid.ColumnSpan="2"
                                       Grid.Row="0"  Header="Добавление новой книги" Position="Left"  >
-                        <Grid   >
+                        <!--Этот блок надо вынести в отдельный control вдруг он тебе понадобиться еще где нибудь,
+                        и этому контролу добавить свой DataContext - DataContext="{Binding AddBook, Source={StaticResource Locator}}"-->
+                        <!--start-->                        
+                        <Grid  >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="0.3*" />
                                 <RowDefinition Height="0.3*" />
@@ -47,7 +53,7 @@
                             </Grid.ColumnDefinitions>
                             <TextBlock VerticalAlignment="Center"   FontSize="20" Grid.Row="0" Grid.Column="0" Margin="10,19,13.4,18.4" Height="25" > Год написания</TextBlock>
                             <TextBox x:Name="YearTextBox" Grid.Row="0" Grid.Column="1"  BorderThickness="3"  Controls:TextBoxHelper.ClearTextButton="True"
-                 BorderBrush="Black" Margin="0,17,10,15" FontSize="14" Grid.ColumnSpan="2" >
+                 BorderBrush="Black" Margin="0,17,10,15" FontSize="14" Grid.ColumnSpan="2"  >
                                 <Binding Path="AddBookVM.NewBook.Year" UpdateSourceTrigger="PropertyChanged">
                                     <Binding.ValidationRules>
                                         <local:YearTextBoxValidationRule></local:YearTextBoxValidationRule>
@@ -55,9 +61,13 @@
                                 </Binding>
                             </TextBox>
                             <TextBlock VerticalAlignment="Center"   FontSize="20" Grid.Row="1" Grid.Column="0" Margin="10,18.6,13.4,19.6" Height="25" > Название</TextBlock>
+
+                            <!--Привязку лучше написать так Text="{Binding AddBookVM.NewBook.Name, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"-->
+                            
                             <TextBox x:Name="NameTextBox" Controls:TextBoxHelper.Watermark="Добавьте название книги"  Controls:TextBoxHelper.ClearTextButton="True"
-                                     Grid.Row="1" Grid.Column="1"  BorderThickness="3" 
+                                     Grid.Row="1" Grid.Column="1"  BorderThickness="3"  
                  BorderBrush="Black" Margin="0,17,10,15" FontSize="14" Grid.ColumnSpan="2" >
+                                <!--про валидацию смотрив AddBookViewModel-->
                                 <Binding Path="AddBookVM.NewBook.Name" UpdateSourceTrigger="PropertyChanged">
                                     <Binding.ValidationRules>
                                         <local:TextBoxIsEmptyValidationRule></local:TextBoxIsEmptyValidationRule>
@@ -92,7 +102,8 @@
                             <Button  Content="Зарегистрировать" Grid.Row="4" Grid.Column="0" Style="{StaticResource RegisterBookButtonStyle}"
                 Command="{Binding SaveListCommand}"   CommandParameter="{Binding ElementName=AuthorsList, Path=SelectedItems}"
                    HorizontalAlignment="Center" VerticalAlignment="Center"  Width="200" FontSize="20" Grid.ColumnSpan="2" />
-                        </Grid>
+                        </Grid> 
+                        <!--end-->
                     </Controls:Flyout>
                     <DataGrid Grid.Row="1"  ItemsSource="{Binding Books}" AutoGenerateColumns="True" Style="{StaticResource AzureDataGrid}">
 
