--- a/NewKartoteka/EditBookControl.xaml
+++ b/NewKartoteka/EditBookControl.xaml
@@ -6,7 +6,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NewKartoteka"
              mc:Ignorable="d" 
-             DataContext="{Binding AddBook, Source={StaticResource Locator}}">
+             DataContext="{Binding EditBook, Source={StaticResource Locator}}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -24,7 +24,7 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="0"  Margin="10,19,13.4,18.4"  > Удалить существующих авторов:</TextBlock>
-        <ListBox x:Name="RemoveAuthorsList" Height="250" Margin="10,17,10,15" ItemsSource="{Binding Path=AllAuthors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+            <ListBox x:Name="RemoveAuthorsList" Height="230" Margin="10,17,10,15" ItemsSource="{Binding Path=Authors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                      SelectionMode="Multiple"  Grid.Row="1">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -38,7 +38,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="2"  Margin="10,19,13.4,19"  >Добавить новых авторов:</TextBlock>
-        <ListBox x:Name="AuthorsList" Height="250" Margin="10,17,10,15" ItemsSource="{Binding Path=AllAuthors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+            <ListBox x:Name="AuthorsList" Height="230" Margin="10,17,10,15" ItemsSource="{Binding Path=AuthorsToAdd, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                      SelectionMode="Multiple"  Grid.Row="3">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -52,8 +52,8 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <Button  Content="Сохранить изменения" Grid.Row="4"  Style="{StaticResource SquareButtonStyle}"
-                Command="{Binding SaveListCommand}"   CommandParameter="{Binding ElementName=AuthorsList, Path=SelectedItems}"
-                   HorizontalAlignment="Center" VerticalAlignment="Bottom"  Width="250" FontSize="20" />
+                Command="{Binding SaveListCommand}" CommandParameter="{Binding ElementName=AuthorsList, Path=SelectedItems}"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"  Width="250" FontSize="20" />
     </Grid>
     </ScrollViewer>
 </UserControl>
