--- a/NewKartoteka/MainWindow.xaml
+++ b/NewKartoteka/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Controls:MetroWindow x:Class="NewKartoteka.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -11,7 +12,8 @@
         BorderThickness="2"
         WindowState="Maximized"
         Title="Kartoteka Application"
-        DataContext="{Binding Main, Source={StaticResource Locator}}">
+        DataContext="{Binding Main, Source={StaticResource Locator}}"
+        Dialog:DialogParticipation.Register="{Binding}">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -19,54 +21,101 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
-    <TabControl  SelectedIndex="2" Controls:TabControlHelper.IsUnderlined="True">
-        <TabItem Header="Книги"  TabIndex="2" Visibility="{Binding IsNewBookOpen ,Converter={StaticResource BooleanToVisibilityConverter}}" >
-            <TabItem.Content>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="0.15*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid Grid.Row="0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <TextBox Grid.Column="0" FontSize="18" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" Width="300"
-                                 Text="{Binding FilterString, UpdateSourceTrigger=PropertyChanged}"
+    <Grid>
+        <Controls:Flyout  Panel.ZIndex="1" Width="500" IsOpen="{Binding IsNewBookOpen}" Grid.RowSpan="2"  
+                                        Header="Добавление новой книги" Position="Left"  >
+            <local:AddBookControl x:Name="AddBookContr"></local:AddBookControl>
+        </Controls:Flyout>
+        <Controls:Flyout  Panel.ZIndex="1"  Width="350" IsOpen="{Binding IsEditBookOpen}" Grid.RowSpan="2"  
+                                       Header="Редактирование книги" Position="Right"  >
+            <local:EditBookControl x:Name="EditBook"></local:EditBookControl>
+        </Controls:Flyout>
+        <Controls:Flyout  Panel.ZIndex="1" Width="500" IsOpen="{Binding IsNewAuthorOpen}" Grid.RowSpan="2"  
+                                        Header="Добавление нового автора" Position="Left"  >
+            <local:AddAuthorControl x:Name="AddAuthorContr"></local:AddAuthorControl>
+        </Controls:Flyout>
+        <TabControl   Controls:TabControlHelper.IsUnderlined="True">
+            <TabItem Header="Книги"  >
+                <TabItem.Content>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="0.15*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <TextBox Grid.Column="0" FontSize="18" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" Width="300"
+                                 Text="{Binding FilterBooksString, UpdateSourceTrigger=PropertyChanged}"
                                  Controls:TextBoxHelper.Watermark="Поиск" Style="{DynamicResource SearchMetroTextBox}"></TextBox>
-                        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                            <Button  Content="+ Добавить" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding OpenAddBookWinCommand, Mode=OneWay}"
+                            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                                <Button  Content="+ Добавить" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding OpenAddBookWinCommand, Mode=OneWay}"
                   VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,20,0" Width="150" FontSize="18" />
-                        <Button  Content="Редактировать"    Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding OpenEditBookWinCommand, Mode=OneWay}"
+                                <Button  Content="- Удалить" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding RemoveBookWinCommand, Mode=OneWay}"
+                  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,20,0" Width="150" FontSize="18" 
+                                       CommandParameter="{Binding ElementName=BooksDataGrid, Path=SelectedItem}"  />
+                                <Button  Content="Редактировать" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding OpenEditBookWinCommand, Mode=OneWay}"
                                  CommandParameter="{Binding ElementName=BooksDataGrid, Path=SelectedItem}"
                   VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,10,0" Width="150" FontSize="18" />
-                    </StackPanel>
-                    </Grid>
-                    <Controls:Flyout  Margin="0,-75,0,0" Panel.ZIndex="1" Width="500" IsOpen="{Binding IsNewBookOpen}" Grid.RowSpan="2"  
-                                      Grid.Row="0"  Header="Добавление новой книги" Position="Left"  >
-                        <local:AddBookControl x:Name="AddBookContr"></local:AddBookControl>
-                    </Controls:Flyout>
-                    <Controls:Flyout  Margin="0,-75,0,0" Panel.ZIndex="1"  Width="350" IsOpen="{Binding IsEditBookOpen}" Grid.RowSpan="2"  
-                                      Grid.Row="0"  Header="Редактирование книги" Position="Right"  >
-                        <local:EditBookControl x:Name="EditBook"></local:EditBookControl>
-                    </Controls:Flyout>
-                    <DataGrid x:Name="BooksDataGrid" Grid.Row="1"  ItemsSource="{Binding DataGridCollection}" AutoGenerateColumns="False" Style="{StaticResource AzureDataGrid}">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Header="ID"
+                            </StackPanel>
+                        </Grid>
+                        <DataGrid x:Name="BooksDataGrid" Grid.Row="1" ItemsSource="{Binding BooksDataGridCollection}" AutoGenerateColumns="False" Style="{StaticResource AzureDataGrid}">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="ID"
                                     Binding="{Binding Id}" />
-                            <DataGridTextColumn Header="Year"
+                                <DataGridTextColumn Header="Year"
                                     Binding="{Binding Year}" />
-                            <DataGridTextColumn Header="Name"
+                                <DataGridTextColumn Header="Name"
                                     Binding="{Binding Name}" />
-                            <DataGridTextColumn Header="Description"
+                                <DataGridTextColumn Header="Description"
                                     Binding="{Binding Description}" />
 
-                        </DataGrid.Columns>
-                    </DataGrid>
-                </Grid>
-            </TabItem.Content>
-        </TabItem>
-        <TabItem Header="Авторы" Visibility="{Binding IsNewBookOpen, Converter={StaticResource BooleanToVisibilityConverter}}"></TabItem>
-    </TabControl>
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Grid>
+                </TabItem.Content>
+            </TabItem>
+            <TabItem Header="Авторы" >
+                <TabItem.Content>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="0.15*" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <TextBox Grid.Column="0" FontSize="18" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" Width="300"
+                                 Text="{Binding FilterAuthorsString, UpdateSourceTrigger=PropertyChanged}"
+                                 Controls:TextBoxHelper.Watermark="Поиск" Style="{DynamicResource SearchMetroTextBox}"></TextBox>
+                            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                                <Button  Content="+ Добавить" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding OpenAddAuthorWinCommand, Mode=OneWay}"
+                  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,20,0" Width="150" FontSize="18" />
+                                <Button  Content="- Удалить" Style="{StaticResource AccentedSquareButtonStyle}" Command="{Binding RemoveAuthorWinCommand, Mode=OneWay}"
+                  VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,20,0" Width="150" FontSize="18" 
+                                       CommandParameter="{Binding ElementName=AuthorsDataGrid, Path=SelectedItem}"  />
+                            </StackPanel>
+                        </Grid>
+                        <DataGrid x:Name="AuthorsDataGrid" Grid.Row="1" ItemsSource="{Binding AuthorsDataGridCollection}" AutoGenerateColumns="False" Style="{StaticResource AzureDataGrid}">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="ID"
+                                    Binding="{Binding Id}" />
+                                <DataGridTextColumn Header="First Name"
+                                    Binding="{Binding FirstName}" />
+                                <DataGridTextColumn Header="Second Name"
+                                    Binding="{Binding SecondName}" />
+                                <DataGridTextColumn Header="Last Name"
+                                    Binding="{Binding LastName}" />
+
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Grid>
+                </TabItem.Content>
+            </TabItem>
+        </TabControl>
+    </Grid>
 </Controls:MetroWindow>
