--- a/NewKartoteka/EditBookControl.xaml
+++ b/NewKartoteka/EditBookControl.xaml
@@ -1,12 +1,14 @@
 ﻿<UserControl x:Class="NewKartoteka.EditBookControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:NewKartoteka"
              mc:Ignorable="d" 
-             DataContext="{Binding EditBook, Source={StaticResource Locator}}">
+             DataContext="{Binding EditBook, Source={StaticResource Locator}}"
+             Dialog:DialogParticipation.Register="{Binding}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -15,45 +17,54 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <ScrollViewer VerticalScrollBarVisibility="Auto">
-    <Grid >
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
-        </Grid.RowDefinitions>
-        <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="0"  Margin="10,19,13.4,18.4"  > Удалить существующих авторов:</TextBlock>
-            <ListBox x:Name="RemoveAuthorsList" Height="230" Margin="10,17,10,15" ItemsSource="{Binding Path=Authors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                     SelectionMode="Multiple"  Grid.Row="1">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal" Margin="5">
-                        <TextBlock FontSize="16" Text="{Binding Path=Id}" Margin="0,0,5,0" />
-                        <TextBlock FontSize="16" Text="{Binding Path=FirstName}" Margin="0,0,10,0"    />
-                        <TextBlock FontSize="16" Text="{Binding Path=SecondName}" Margin="0,0,10,0"    />
-                        <TextBlock FontSize="16" Text="{Binding Path=LastName}"  />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="2"  Margin="10,19,13.4,19"  >Добавить новых авторов:</TextBlock>
-            <ListBox x:Name="AuthorsList" Height="230" Margin="10,17,10,15" ItemsSource="{Binding Path=AuthorsToAdd, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                     SelectionMode="Multiple"  Grid.Row="3">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal" Margin="5">
-                        <TextBlock FontSize="16" Text="{Binding Path=Id}" Margin="0,0,5,0" />
-                        <TextBlock FontSize="16" Text="{Binding Path=FirstName}" Margin="0,0,10,0"    />
-                        <TextBlock FontSize="16" Text="{Binding Path=SecondName}" Margin="0,0,10,0"    />
-                        <TextBlock FontSize="16" Text="{Binding Path=LastName}"  />
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-        <Button  Content="Сохранить изменения" Grid.Row="4"  Style="{StaticResource SquareButtonStyle}"
-                Command="{Binding SaveListCommand}" CommandParameter="{Binding ElementName=AuthorsList, Path=SelectedItems}"
-                   HorizontalAlignment="Center" VerticalAlignment="Center"  Width="250" FontSize="20" />
-    </Grid>
+        <Grid >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1.1*" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+            <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="0" Grid.Column="0" Margin="10,19,13.4,18.4"  > Год написания</TextBlock>
+            <TextBox x:Name="YearTextBox" Grid.Row="0" Grid.Column="1"  Controls:TextBoxHelper.ClearTextButton="True"
+                 Text="{Binding SelectedBook.Year, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"
+                                      Margin="0,17,10,15" FontSize="14" Grid.ColumnSpan="2"  >
+            </TextBox>
+            <TextBlock VerticalAlignment="Center"   FontSize="20" Grid.Row="1" Grid.Column="0" Margin="10,18.6,13.4,19.6" > Название</TextBlock>
+
+            <TextBox x:Name="NameTextBox" Controls:TextBoxHelper.Watermark="Добавьте название книги"  Controls:TextBoxHelper.ClearTextButton="True"
+                         Text="{Binding SelectedBook.Name, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"
+                 Grid.Row="1" Grid.Column="1" Margin="0,17,10,15" FontSize="14" Grid.ColumnSpan="2" >
+            </TextBox>
+            <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="2" Grid.Column="0" Margin="10,19,13.4,19"  >Описание</TextBlock>
+            <TextBox x:Name="DescriptionTextBox" Height="170" Controls:TextBoxHelper.Watermark="Введите описание книги" Grid.Row="2" Grid.Column="1"  
+                 Text="{Binding SelectedBook.Description, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"
+                 Controls:TextBoxHelper.ClearTextButton="True" Margin="0,17,10,15" FontSize="14" Grid.ColumnSpan="2" >
+            </TextBox>
+            <ListBox x:Name="AuthorsList"  Height="240" Margin="0,17,10,15" ItemsSource="{Binding Path=SelectedBook.authors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                      Grid.Row="3" Grid.Column="1" >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <TextBlock FontSize="16" Text="{Binding Path=Id}" Margin="0,0,5,0" />
+                            <TextBlock FontSize="16" Text="{Binding Path=FirstName}" Margin="0,0,10,0"    />
+                            <TextBlock FontSize="16" Text="{Binding Path=SecondName}" Margin="0,0,10,0"    />
+                            <TextBlock FontSize="16" Text="{Binding Path=LastName}"  />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <TextBlock VerticalAlignment="Center" Text="Список авторов" FontSize="20" Grid.Row="3" Grid.Column="0" Margin="10,19,10.4,19"  />
+            <Button  Content="Изменить авторов" Grid.Row="4" Grid.Column="1" Style="{StaticResource SquareButtonStyle}"  Margin="0,0,10,20"
+                Command="{Binding OpenEditAuthorsCommand}" HorizontalAlignment="Right" VerticalAlignment="Center"  Width="200" FontSize="20" />
+            <Button  Content="Сохранить изменения" Grid.Row="5" Grid.Column="0" Style="{StaticResource RegisterBookButtonStyle}"
+                Command="{Binding EditBookCommand}"   CommandParameter="{Binding ElementName=AuthorsList, Path=SelectedItems}"
+                   HorizontalAlignment="Center" VerticalAlignment="Bottom"  Width="240" FontSize="20" Grid.ColumnSpan="2" />
+        </Grid>
     </ScrollViewer>
 </UserControl>
