--- a/NewKartoteka/EditBookControl.xaml
+++ b/NewKartoteka/EditBookControl.xaml
@@ -32,21 +32,21 @@
             </Grid.ColumnDefinitions>
             <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="0" Grid.Column="0" Margin="10,19,13.4,18.4"  > Год написания</TextBlock>
             <TextBox x:Name="YearTextBox" Grid.Row="0" Grid.Column="1"  Controls:TextBoxHelper.ClearTextButton="True"
-                 Text="{Binding SelectedBook.Year, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"
+                 Text="{Binding Year, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"
                                       Margin="0,17,10,15" FontSize="14" Grid.ColumnSpan="2"  >
             </TextBox>
             <TextBlock VerticalAlignment="Center"   FontSize="20" Grid.Row="1" Grid.Column="0" Margin="10,18.6,13.4,19.6" > Название</TextBlock>
 
             <TextBox x:Name="NameTextBox" Controls:TextBoxHelper.Watermark="Добавьте название книги"  Controls:TextBoxHelper.ClearTextButton="True"
-                         Text="{Binding SelectedBook.Name, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"
+                         Text="{Binding Name, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"
                  Grid.Row="1" Grid.Column="1" Margin="0,17,10,15" FontSize="14" Grid.ColumnSpan="2" >
             </TextBox>
             <TextBlock VerticalAlignment="Center"  FontSize="20" Grid.Row="2" Grid.Column="0" Margin="10,19,13.4,19"  >Описание</TextBlock>
             <TextBox x:Name="DescriptionTextBox" Height="170" Controls:TextBoxHelper.Watermark="Введите описание книги" Grid.Row="2" Grid.Column="1"  
-                 Text="{Binding SelectedBook.Description, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"
+                 Text="{Binding Description, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, Mode=TwoWay}"
                  Controls:TextBoxHelper.ClearTextButton="True" Margin="0,17,10,15" FontSize="14" Grid.ColumnSpan="2" >
             </TextBox>
-            <ListBox x:Name="AuthorsList"  Height="240" Margin="0,17,10,15" ItemsSource="{Binding Path=SelectedBook.authors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+            <ListBox x:Name="AuthorsList"  Height="240" Margin="0,17,10,15" ItemsSource="{Binding Path=Authors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                       Grid.Row="3" Grid.Column="1" >
                 <ListBox.ItemTemplate>
                     <DataTemplate>
