--- a/NewKartoteka/EditListOfAutorsWin.xaml
+++ b/NewKartoteka/EditListOfAutorsWin.xaml
@@ -34,7 +34,7 @@
         </Grid.ColumnDefinitions>
         <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Авторы книги" FontSize="20" Grid.Row="0" Grid.Column="0" Margin="10,19,10,19"  />
         <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Остальные авторы" FontSize="20" Grid.Row="0" Grid.Column="2" Margin="10,19,10,19"  />
-        <ListBox x:Name="AuthorsList" Height="280" Margin="0,17,10,15" ItemsSource="{Binding Path=SelectedBook.authors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+        <ListBox x:Name="AuthorsList" Height="280" Margin="0,17,10,15" ItemsSource="{Binding Path=Authors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                      SelectionMode="Multiple"  Grid.Row="1" Grid.Column="0">
             <ListBox.ItemTemplate>
                 <DataTemplate>
